# MetaDataEditorCpp

./: .gitignore  CMakeLists.txt  Makefile  README.de.md  README.md  app.rc  doxygen_open.bat  metadataeditor.pro
.vscode.example/: c_cpp_properties.json  settings.json  tasks.json
documentation/: Aufgabenstellung.docx  DOXYFILE  Doxyfile  README.md  update_readme.py
documentation/doc_website/html/: _app_constants_8cpp.html  _app_constants_8cpp__incl.dot  _app_constants_8cpp__incl.map  _app_constants_8cpp__incl.md5  _app_constants_8h.html  _app_constants_8h.js  _app_constants_8h__dep__incl.dot  _app_constants_8h__dep__incl.map  _app_constants_8h__dep__incl.md5  _app_constants_8h__incl.dot  _app_constants_8h__incl.map  _app_constants_8h__incl.md5  _app_constants_8h_source.html  _image_editor_g_u_i_8cpp.html  _image_editor_g_u_i_8cpp.js  _image_editor_g_u_i_8cpp__incl.dot  _image_editor_g_u_i_8cpp__incl.map  _image_editor_g_u_i_8cpp__incl.md5  _image_editor_g_u_i_8h.html  _image_editor_g_u_i_8h.js  _image_editor_g_u_i_8h__dep__incl.dot  _image_editor_g_u_i_8h__dep__incl.map  _image_editor_g_u_i_8h__dep__incl.md5  _image_editor_g_u_i_8h__incl.dot  _image_editor_g_u_i_8h__incl.map  _image_editor_g_u_i_8h__incl.md5  _image_editor_g_u_i_8h_source.html  _logger_8cpp.html  _logger_8cpp__incl.dot  _logger_8cpp__incl.map  _logger_8cpp__incl.md5  _logger_8h.html  _logger_8h.js  _logger_8h__dep__incl.dot  _logger_8h__dep__incl.map  _logger_8h__dep__incl.md5  _logger_8h__incl.dot  _logger_8h__incl.map  _logger_8h__incl.md5  _logger_8h_ac40b050b7aa17a22997145fbed28a152_icgraph.map  (+370 more)
documentation/doc_website/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  (+27 more)
documentation/doxygen-awesome-css/doxygen-custom/: header.html
src/app/: app.icns  main.cpp  resources.qrc  resources_gen.py  run_ress_gen.py
src/app/include/: AppConstants.h  ImageEditorGUI.h  MetaDataHandler.h  Styles.h  TagTextEdit.h  TagWidget.h
src/app/src/: AppConstants.cpp  ImageEditorGUI.cpp  MetaDataHandler.cpp  Styles.cpp  TagTexEdit.cpp  TagWidget.cpp
src/helper/logging/: Logger.cpp  Logger.h
src/logging/: Logger.cpp  Logger.h
src/metadata/include/: PNGMeta.h
src/metadata/src/: MetaDataHandler.cpp  PNGMeta.cpp
testdata/images/: test.blend
